@@ -17,6 +17,14 @@ function smarty_modifier_debug_print_var($var, $depth = 0, $length = 40)
             $results .= '<br>\r'.str_repeat('&nbsp;', $depth*2)."<b>$curr_key</b> =&gt; $return";
         }
         return $results;
+    } else if (is_object($var)) {
+        $object_vars = get_object_vars($var);
+        $results = "<b>".get_class($var)." Object (".count($object_vars).")</b>";
+        foreach ($object_vars as $curr_key => $curr_val) {
+            $return = smarty_modifier_debug_print_var($curr_val, $depth+1);
+            $results .= '<br>\r'.str_repeat('&nbsp;', $depth*2)."<b>$curr_key</b> =&gt; $return";
+        }
+        return $results;
     } else {
         if (empty($var) && $var != "0") {
             return '<i>empty</i>';
